2002-03-21  Havoc Pennington  <hp@redhat.com>

	* gconf/gconf-schema.c: move schema accessors to be functions not
	macros.

2002-03-20  Havoc Pennington  <hp@redhat.com>

	* gconf/gconf-internals.c
	(gconf_value_list_to_primitive_list_destructive): don't call
	gconf_value_get_int on a bool. WTF.

	* gconf/gconfd.c (main): enable the signal handler for USR1

	* backends/xml-dir.c (dir_load_doc): do our own file reading, only
	use libxml to parse, so we can return an error on I/O problems
	(as opposed to the current behavior, nuking the file contents,
	which only makes sense for corrupt files)

2002-03-20  Havoc Pennington  <hp@redhat.com>

	* gconf/gconf-value.c: change all the "getters" to be functions
	not macros, so we can add g_return_if_fail and be typesafe and
	generally suck less. Suggested most recently by Jody.

2002-03-19  Havoc Pennington  <hp@pobox.com>

	* backends/xml-cache.c (dircmp): fix bad assertion reported
	by lunarbard on #gnome

2002-03-14  Havoc Pennington  <hp@redhat.com>

	* gconf/gconf-sanity-check.c (check_gconf): beef up the sanity
	checker to detect stuck locks, missing config files, and other
	screwups.

2002-03-10  Havoc Pennington  <hp@pobox.com>

	* gconf/gconf-sources.c (gconf_sources_query_metainfo): fix
	obnoxious typo (s/mi/this_mi/), also needed to fix bug 
	reported by Kristian.

	* backends/xml-backend.c (query_metainfo): make key relative prior
	to looking up metainfo. Fixes bug where schema defaults would
	mysteriously get lost in some cases, reported by Kristian
	Rietveld.

2002-03-07  Havoc Pennington  <hp@pobox.com>

	* backends/xml-test.c: test program for XML backend code

	* configure.in: add a "minimum" debug mode and compile with it
	by default.

	* gconf/gconftool.c (main): call setlocale()

	* tests/runtests.sh: run tests in various locales

	* gconf/gconf-value.h: add more padding to GConfEntry
	
	* gconf/gconf-internals.c (gconf_CORBA_Object_equal):
	(gconf_CORBA_Object_hash): remove stupid inlining of these